--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.98.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/three": "^0.173.0",
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
@@ -35,6 +36,7 @@
     "react-modal": "^3.16.3",
     "recharts": "^2.15.0",
     "stream-browserify": "^3.0.0",
+    "three": "^0.173.0",
     "util": "^0.12.5"
   },
   "devDependencies": {
